--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>React Test</title>
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
     <style>
-        a { cursor: pointer; }
+        a {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
 
-    <div id="app"></div>
+<div id="app"></div>
 
+<div class="footer">
+    <p><a href="/">2020 Kiev Ukraine</a></p>
+</div>
 </body>
 </html>
